<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navigation_chats">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.softengineeringmessanger.ui.auth.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_chats"
            app:destination="@id/navigation_chats" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.softengineeringmessanger.ui.auth.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_chats"
            app:destination="@id/navigation_chats" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.softengineeringmessanger.ui.chats.ChatListFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_chats_to_destination_fragment_chat"
            app:destination="@id/destination_fragment_chat" />
    </fragment>
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.softengineeringmessanger.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_navigation_contacts_to_chatFragment"
            app:destination="@id/destination_fragment_chat" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.softengineeringmessanger.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/destination_fragment_chat"
        android:name="com.example.softengineeringmessanger.ui.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" >
        <argument
            android:name="companionId"
            app:argType="integer" />
        <argument
            android:name="companionUsername"
            app:argType="string" />
    </fragment>
</navigation>